--- a/css/style-v2.5-print.css
+++ b/css/style-v2.5-print.css
@@ -50,6 +50,23 @@ a, a:visited {
 	clear: both;
 }
 
+.section-body .about-me{
+	line-height: 1.7
+}
+
+.section-body .about-me h6{
+	font-weight:500;
+	font-size: 18px;
+	margin-bottom: 10px;
+	margin-top: 15px;
+}
+.section-body .about-me li{
+	list-style: disc;
+	margin-left: 1.3em;
+	font-size: 14px;
+	margin-bottom: 10px;
+}
+
 /* é€šç”¨åˆ—è¡¨æ ·å¼ */
 .list > li {
 	list-style: disc;
